--- a/lp.html
+++ b/lp.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="lp.css">
 </head>
 <body>
-    
+    <section class="main-body">
+        <section class="nav-bar">
+            <h1>Header</h1>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Contact</li>
+                    <li>Content</li>
+                </ul>
+            </nav>
+        </section>
+        <div>divider</div>
+        <section class="bar-one">
+            <section class="txt">
+                <div>This website is awesome</div>
+                <div>This website has some subtext that goes here under the main title. 
+                It's a smaller font and the color is lower contrats.</div>
+                <button>Sign Up</button>
+            </section>
+            <section class="img">
+                <img>
+            </section>
+        </section>
+    </section>
 </body>
 </html>
