--- a/lp.html
+++ b/lp.html
@@ -18,17 +18,31 @@
                 </ul>
             </nav>
         </section>
-        <div>divider</div>
         <section class="bar-one">
             <section class="txt">
-                <div>This website is awesome</div>
+                <div class="bold">This website is awful</div>
                 <div>This website has some subtext that goes here under the main title. 
                 It's a smaller font and the color is lower contrats.</div>
-                <button>Sign Up</button>
+                <button class="bar-one-button">Sign Up</button>
             </section>
             <section class="img">
-                <img>
+                <img class="rat" src="doom-game-demon-skull-horns-wallpaper-preview.jpg">
             </section>
+        </section>
+        <section class="bar-two">
+            <div class="randominfo">Some random informacion.</div>
+            <section class="grid-container">
+                <img class="cube">
+                <img class="cube">
+                <img class="cube">
+                <img class="cube">
+                <div class="sometxt">some text some text some text</div><div class="sometxt">some text some text some text</div>
+                <div class="sometxt">some text some text some text</div><div class="sometxt">some text some text some text</div>
+            </section>
+        </section>
+        <section class="bar-three">
+            <div class="quote">“Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.”
+                <i>― Bernard M. Baruch</i> </div>
         </section>
     </section>
 </body>
